Add translation support for menus

--- a/Buildable Ginger Island Farm/i18n/default.json
+++ b/Buildable Ginger Island Farm/i18n/default.json
@@ -1,4 +1,9 @@
 ﻿{
+	// Menu
+	"Menu.GingerIslandFarm.DisplayName": "Ginger Island Farm",
+	"Menu.CarpenterMenu.ChooseLocation": "Where do you want to manage buildings?",
+	"Menu.PurchaseAnimalsMenu.ChooseLocation": "Where do you want to manage animals?",
+
 	// GMCM
 	"GMCM.AllowBuildingInSlimeArea.Title": "Allow building in the slime area",
 	"GMCM.AllowBuildingInSlimeArea.Tooltip": "Defines whether or not to allow building in the slime area."
